# UniCOP

./: .gitignore  README.md  address.md  auto_all.sh  check_deepspeed.py  check_env.py  check_versions.py  generate_chains.py  link_nvidia_libs.sh  lkh_solver.py  measure_sft_tokens.py  paths.sh  run_distill.sh  setup_env.sh  smart_submit.sh
UniCOP-Reason/: .gitignore  auto_eval.sh  auto_eval_base.sh  auto_eval_rep_penalty.sh  auto_train.sh  bestofn_eval.py  config.py  diag_coverage.py  evaluate.py  fix_tokenizer.sh  foarl_reward.py  grpo_prm_trainer.py  pomo_prm.py  preflight.sh  pyproject.toml  ref_solver.py  requirements.txt  run_grpo_cvrp20.sh  run_grpo_cvrp20_6gpu.sh  run_grpo_cvrp20_hardgate.sh  sanity_versions.py  smoke_test_eval.py  smoke_test_rl_compat.py  stride_system.py  submit_grpo_cvrp20.sh  submit_grpo_cvrp20_6gpu.sh  submit_grpo_cvrp20_6gpu_paperhp.sh  submit_grpo_cvrp20_hardgate.sh  submit_mini_grpo_qwen3.sh  submit_smoke_eval.sh  submit_smoke_rl_qwen3.sh  submit_wave_vs_bon_cvrp20.sh  terminal_reward.py  test_output_length.py  tmp_chat_template_diagnose.py  train.py  wave_replay.py
UniCOP-Reason-Mask/: auto_eval.sh  auto_eval_base.sh  auto_eval_rep_penalty.sh  auto_train.sh  config.py  diag_coverage.py  diag_parse_rate.py  evaluate.py  grpo_prm_trainer.py  merge_lora.py  merge_shards.py  pomo_prm.py  preflight.sh  preflight_gpu.sh  probe_mask_inference.py  probe_vllm_logits_processor.py  probe_vllm_sync.py  prompt_think_patch.py  pyproject.toml  run_eval_matrix.sh  run_grpo_cvrp20.sh  run_grpo_cvrp20_6gpu.sh  run_grpo_cvrp20_hardgate.sh  run_grpo_cvrp20_mask.sh  run_grpo_cvrp20_v4.sh  run_grpo_cvrp20_v4_mask.sh  run_grpo_cvrp20_v5.sh  run_grpo_cvrp20_v5_mask.sh  run_grpo_cvrp20_v6.sh  run_grpo_cvrp20_v6_instruct.sh  run_zhihan_v5.sh  sanity_check.py  smoke_no_repeat_ngram.py  stride_system.py  submit_eval_base4shard.sh  submit_eval_compare.sh  submit_eval_v6c_instruct.sh  submit_eval_v6c_thinking.sh  submit_eval_v6c_vs_foarl.sh  submit_grpo_cvrp20.sh  (+28 more)
UniCOP-Reason-Mask/data/: generate.py
UniCOP-Reason-Mask/openrlhf/: README.md  install.sh  requirements.txt
UniCOP-Reason-Mask/problems/: cvrp.py  tsp.py  tspdl.py  tsptw.py  vrptw.py
UniCOP-Reason-Mask/tests/: check_think_token.py  test_cvrp_mask_state.py  test_dry_processor.py  test_dry_vectorized.py  test_liger_compat.py  test_prefix_tree_mask.py  test_repair_routes.py  test_retry_until_feasible.py  test_selective_logp.py  test_think_rep_algorithm.py
UniCOP-Reason-Mask/utils/: cvrp_mask_state.py  pipd_wrapper.py  think_rep_processor.py  vllm_cvrp_mask_processor.py  vllm_ngram_processor.py  vllm_serve_logprobs.py
UniCOP-Reason/data/: generate.py
UniCOP-Reason/openrlhf/: .gitignore  README.md  install.sh
UniCOP-Reason/optimal/: .gitignore  README.md  build_optimal.py  loader.py  solvers.py
UniCOP-Reason/problems/: __init__.py  base.py  cvrp.py  tsp.py  tspdl.py  tsptw.py  vrptw.py
UniCOP-Reason/utils/: parse.py  (+2 more)
(+121 files in other folders)
