[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "unicop-reason"
version = "0.1.0"
description = "GRPO + POMO PRM for routing combinatorial optimization problems"
requires-python = ">=3.10"
# 依赖不在这里锁定,统一走 requirements.txt 和用户手动 pip install 'trl==1.2.0' 那套
# 这个 pyproject.toml 的唯一作用: 让 pip install -e . 注册 vllm.logits_processors
# entry point,让 vLLM 启动时自动 discover 我们的 NoRepeatNgramAdapterLP。

# (entry point 已删除: 原 NoRepeatNgramAdapterLP 不再使用, 改用 CVRP-specific
#  mask processor, 通过 vllm_serve_logprobs.py 的 SamplingParams 实例字段赋值注入,
#  不走 vLLM entry point 路径)

# ── setuptools 包发现 ──
# 只把项目里的三个 package (utils / problems / data) 纳入 editable install,
# 顶层脚本 (train.py / evaluate.py / config.py 等) 靠 cwd 直接 python 执行,
# 不作为 package 安装。排除训练产物和缓存目录。
[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "problems*", "data*"]
exclude = ["output*", "logs*", "model*", "tests*", "__pycache__*", "eval_results*"]
